--- a/templates/main.html
+++ b/templates/main.html
@@ -11,8 +11,8 @@
         <a class="navbar-brand" href="{% url 'home' %}">Mis Tareas APP</a>
     </nav>
 </header>
-<body style="background: azure;">
-<div class="container" style="max-width: 600px;">
+<body style="background: lightslategray;">
+<div class="container" style="max-width: 600px; background: white; padding: 1rem 1rem 1rem 1rem;">
 {% block container %}
 {% endblock %}
 </div>
